# prompt_golf_env

./: .gitattributes  .gitignore  BLOG_POST.md  Dockerfile  README.md  TRAINING.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
notebooks/: prompt_golf_train_minimal.ipynb
server/: Dockerfile  __init__.py  app.py  judge.py  prompt_golf_environment.py  requirements.txt  rubrics.py  scorer.py  target_model.py  tasks.py  tasks_policy.py  tasks_tough.py  tasks_v2.py
space-demo/: .gitignore  README.md  app.py  requirements.txt
training/: TRAINING.md  build_before_after_csv.py  eval_before_after.py  hf_job_eval.sh  hf_job_profile.sh  hf_job_train.sh  hf_job_train_multistep.sh  make_plots.py  profile_baseline.py  replay_to_trackio.py  requirements.txt  train_grpo.py  train_grpo_multistep.py
ui/: README.md  demo_app.py
